PROJECT(string)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

ADD_EXECUTABLE(string_rotate string_rotate.cpp)
ADD_EXECUTABLE(word_rotate word_rotate.cpp)
ADD_EXECUTABLE(string_contain string_contain.cpp)
ADD_EXECUTABLE(is_palindrome is_palindrome.cpp)
ADD_EXECUTABLE(longest_palindrome longest_palindrome.cpp)